# gateway_routing

./: Cargo.toml  README.md
src/: b.rs  main.rs
src/config/: args.rs  config.rs  config.yaml  mod.rs  pingora.yaml
src/proxy/: mod.rs  rule.rs
src/proxy/http/: http_proxy.rs
src/server/: proxy.rs  service.rs
